--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,20 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <div class="">1</div>
-    <div class="active">2</div>
-    <div class="findme">
-        <div class="some">lorem</div>
-        <div class="more">eqw</div>
-        <div class="some">qrqww</div>
-        <div class="some">fqwfwqf</div>
-        <div class="more">acmskl</div>
+    <div class="container">
+        <div class="">1</div>
+        <div class="active">2</div>
+        <div class="findme">
+            <div class="some">lorem</div>
+            <div class="more">eqw</div>
+            <div class="some">qrqww</div>
+            <div class="some">fqwfwqf</div>
+            <div class="more">acmskl</div>
+        </div>
+        <div class="">4</div>
+        <div class="">5</div>
+        <button class="btn">Click me</button>
     </div>
-    <div class="">4</div>
-    <div class="">5</div>
-    <button>Click me</button>
 
     <script src='script.js'></script>
 </body>
